-Eliminado calculadora del archivo html -Añadiendo targeta de objetos de casas -Añadiendo carpeta de img casas

--- a/index.html
+++ b/index.html
@@ -47,44 +47,28 @@
                 </div>
             </div>
             <!-- ---------------------------------------------------------------------------------------------------------------------- -->
-            <!-- Calculadora -->
+            <!--  -->
             <!-- ---------------------------------------------------------------------------------------------------------------------- -->
-            <div class="cart calculadora">
-                <h1 class="title-calculadora">Calculadora</h1>
-                <span class="pantalla-calculadora"></span>
-                <div class="container-btn-calculadora">
-                    <div class="row-btn-calculadora">
-                        <button class="btn clear">c</button>
-                        <button class="btn reset">r</button>
-                        <button class="btn porcent">%</button>
-                        <button class="btn divi">/</button>
-                    </div>
-                    <div class="row-btn-calculadora">
-                        <button class="btn num7">7</button>
-                        <button class="btn num8">8</button>
-                        <button class="btn num9">9</button>
-                        <button class="btn mul">x</button>
-                    </div>
-                    <div class="row-btn-calculadora">
-                        <button class="btn num4">4</button>
-                        <button class="btn num5">5</button>
-                        <button class="btn num6">6</button>
-                        <button class="btn res">-</button>
-                    </div>
-                    <div class="row-btn-calculadora">
-                        <button class="btn num1">1</button>
-                        <button class="btn num2">2</button>
-                        <button class="btn num3">3</button>
-                        <button class="btn mas">+</button>
-                    </div>
-                    <div class="row-btn-calculadora">
-                        <button class="btn null">#</button>
-                        <button class="btn num0">0</button>
-                        <button class="btn decimal">.</button>
-                        <button class="btn igual">=</button>
+            <div class="cart">
+                <div class="container">
+                    <!-- <div class="container-btn">
+                        <div class="btn" >
+                            <div class="btn-l"></div>
+                            <div class="btn-r"></div>
+                        </div>
+                    </div> -->
+                    <img id="casaImg" src="img/casa_3.jpg" alt="casas">
+                    <div class="info">
+                        <h2 class="title">Lorem, ipsum dolor.</h2>
+                        <p>Metros Cuadrados: <span class="metros-cuadrados">400</span></p>
+                        <p>Numero de habitaciones: <span class="habitaciones">7</span></p>
+                        <p>Descripcion: <span class="desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla saepe officiis cumque et deleniti quasi numquam, libero magnam quia quo voluptatibus similique, delectus soluta placeat velit quidem minima, maiores illum?</span></p>
                     </div>
                 </div>
             </div>
+            <!-- ---------------------------------------------------------------------------------------------------------------------- -->
+            <!--  -->
+            <!-- ---------------------------------------------------------------------------------------------------------------------- -->
             <div class="cart"></div>
         </section>
     </main>
