Añadiendo estilos a la targeta #3 ObjetosCasa

--- a/index.html
+++ b/index.html
@@ -49,20 +49,24 @@
             <!-- ---------------------------------------------------------------------------------------------------------------------- -->
             <!--  -->
             <!-- ---------------------------------------------------------------------------------------------------------------------- -->
-            <div class="cart">
-                <div class="container">
+            <div class="cart objetsCasa">
+                <div class="containerCasa">
                     <!-- <div class="container-btn">
                         <div class="btn" >
                             <div class="btn-l"></div>
                             <div class="btn-r"></div>
                         </div>
                     </div> -->
-                    <img id="casaImg" src="img/casa_3.jpg" alt="casas">
-                    <div class="info">
-                        <h2 class="title">Lorem, ipsum dolor.</h2>
+                    <img id="casaImg" src="img/casa_1.jpg" alt="casas">
+                    <div class="infoCasas">
+                        <h2 class="titleCasas">Lorem, ipsum dolor.</h2>
                         <p>Metros Cuadrados: <span class="metros-cuadrados">400</span></p>
                         <p>Numero de habitaciones: <span class="habitaciones">7</span></p>
                         <p>Descripcion: <span class="desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla saepe officiis cumque et deleniti quasi numquam, libero magnam quia quo voluptatibus similique, delectus soluta placeat velit quidem minima, maiores illum?</span></p>
+                    </div>
+                    <div class="container-btn-casa">
+                        <button class="btn btn-l"><-</button>
+                        <button class="btn btn-r">-></button>
                     </div>
                 </div>
             </div>
