Implementancion de codigo JS de carta Objetos Casas

--- a/index.html
+++ b/index.html
@@ -51,22 +51,16 @@
             <!-- ---------------------------------------------------------------------------------------------------------------------- -->
             <div class="cart objetsCasa">
                 <div class="containerCasa">
-                    <!-- <div class="container-btn">
-                        <div class="btn" >
-                            <div class="btn-l"></div>
-                            <div class="btn-r"></div>
-                        </div>
-                    </div> -->
                     <img id="casaImg" src="img/casa_1.jpg" alt="casas">
                     <div class="infoCasas">
-                        <h2 class="titleCasas">Lorem, ipsum dolor.</h2>
+                        <h2 class="titleCasa">Lorem, ipsum dolor.</h2>
                         <p>Metros Cuadrados: <span class="metros-cuadrados">400</span></p>
                         <p>Numero de habitaciones: <span class="habitaciones">7</span></p>
-                        <p>Descripcion: <span class="desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla saepe officiis cumque et deleniti quasi numquam, libero magnam quia quo voluptatibus similique, delectus soluta placeat velit quidem minima, maiores illum?</span></p>
+                        <p>Descripcion: <span class="descCasa">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla saepe officiis cumque et deleniti quasi numquam, libero magnam quia quo voluptatibus similique, delectus soluta placeat velit quidem minima, maiores illum?</span></p>
                     </div>
                     <div class="container-btn-casa">
-                        <button class="btn btn-l"><-</button>
-                        <button class="btn btn-r">-></button>
+                        <button id="btnCasaL" class="btn btn-casa-l">-</button>
+                        <button id="btnCasaR" class="btn btn-casa-r">-></button>
                     </div>
                 </div>
             </div>
@@ -77,6 +71,6 @@
         </section>
     </main>
 
-    <script src="scrips/app.js"></script>
+    <script src="scrips/app.js" defer></script>
 </body>
 </html>
